RESOLVED FIXED126563
SetLocal for a FlushedArguments should not claim that the dataFormat is DataFormatJS
https://bugs.webkit.org/show_bug.cgi?id=126563
Summary SetLocal for a FlushedArguments should not claim that the dataFormat is DataF...
Filip Pizlo
Reported 2014-01-06 22:25:46 PST
Patch forthcoming. Reduced test case: function foo(o) { var a = arguments; var result = o.f; for (var i = 1; i < a.length; ++i) result += a[i]; return result; } noInline(foo); for (var i = 0; i < 100; ++i) print(foo({f:42}, 1, 2, 3)); print(foo({g:40, f:41}, 1, 2.5, 3)); <rdar://problem/15757534>
Attachments
the patch (3.32 KB, patch)
2014-01-06 22:29 PST, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2014-01-06 22:29:13 PST
Created attachment 220493 [details] the patch
Ryosuke Niwa
Comment 2 2014-01-06 22:55:15 PST
WebKit Commit Bot
Comment 3 2014-01-07 00:18:10 PST
Comment on attachment 220493 [details] the patch Clearing flags on attachment: 220493 Committed r161411: <http://trac.webkit.org/changeset/161411>
WebKit Commit Bot
Comment 4 2014-01-07 00:18:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.