SetLocal for a FlushedArguments should not claim that the dataFormat is DataFormatJS https://bugs.webkit.org/show_bug.cgi?id=126563

Reviewed by Gavin Barraclough.

This was a rookie arguments simplification mistake: the SetLocal needs to record the fact
that although it set JSValue(), OSR should think it set Arguments. DataFormatArguments
conveys this, and dataFormatFor(FlushFormat) will do the right thing.

* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):
* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compile):
* tests/stress/phantom-arguments-set-local-then-exit-in-same-block.js: Added.
(foo):


Canonical link: https://commits.webkit.org/144460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161411 268f45cc-cd09-0410-ab3c-d52691b4dbfc